objects/Lead_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This matrix is used to map the lead status to the correct transition flag</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_State__c</fullName>
        <label>Transition State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lead Matrix</label>
</CustomObject>